salesforce/force-app/main/default/objects/Vastify_Setting__mdt/Vastify_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Vastify Setting</label>
    <pluralLabel>Vastify Settings</pluralLabel>
</CustomObject>