salesforce/force-app/main/default/objects/Vastify_Setting__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>API Key</label>
    <type>Text</type>
    <length>128</length>
    <required>true</required>
</CustomField>