salesforce/force-app/main/default/objects/Vastify_Setting__mdt/fields/Api_Url__c.field-meta.xml
<CustomField>
    <fullName>Api_Url__c</fullName>
    <label>API URL</label>
    <type>Url</type>
    <required>true</required>
</CustomField>