salesforce/force-app/main/default/objects/Vastify_Setting__mdt/fields/Archive_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Archive_Age_Days__c</fullName>
    <label>Archive Age (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>