salesforce/force-app/main/default/objects/Vastify_Setting__mdt/fields/Delete_Original_ContentVersion__c.field-meta.xml
<CustomField>
    <fullName>Delete_Original_ContentVersion__c</fullName>
    <label>Delete Original ContentVersion</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>